turmites.lessons.turmites.langton.Langton.scala.code
def step() {
  def setCouleurSol(couleur) = {
    setCouleurBrosse(couleur)
    baisseBosse()
    leveBrosse()
  }

  setCouleurSol(Color.Black)
  avance()
}